Added math linter

--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "author": "",
-  "description": "",
-  "devDependencies": {
-    "markdownlint-cli": "^0.47.0"
-  },
-  "engines": {
-    "npm": "Use pnpm instead of npm!"
-  },
-  "license": "",
-  "main": "",
-  "name": "lecture",
-  "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "lint:md": "markdownlint *.md */*.md"
-  },
-  "version": "1.0.0",
-  "packageManager": "pnpm@10.5.2"
+    "author": "",
+    "description": "",
+    "devDependencies": {
+        "katex": "^0.16.28",
+        "markdownlint-cli": "^0.47.0"
+    },
+    "engines": {
+        "npm": "Use pnpm instead of npm!"
+    },
+    "license": "",
+    "main": "",
+    "name": "lecture",
+    "scripts": {
+        "preinstall": "npx only-allow pnpm",
+        "lint:math": "node ./scripts/check-math.mjs",
+        "lint:md": "markdownlint *.md */*.md"
+    },
+    "version": "1.0.0",
+    "packageManager": "pnpm@10.5.2"
 }
