--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
         "format:dashlines": "python3 ./scripts/remove_dash_only_lines.py",
         "format:markdownlint": "markdownlint -f ./*.md doc/*.md",
         "preinstall": "npx only-allow pnpm",
-        "lint": "run-p lint:math lint:insertion lint:md",
+        "lint": "run-p lint:math lint:insertion lint:fence lint:py lint:md",
         "lint:math": "node ./scripts/check-math.mjs",
         "lint:insertion": "python3 ./scripts/check_inline_math_spacing.py",
-        "lint:md": "markdownlint *.md */*.md"
+        "lint:fence": "python3 ./scripts/lint_no_plain_python_fence.py",
+        "lint:py": "python3 -m compileall -q scripts",
+        "lint:md": "markdownlint *.md */*.md",
+        "snippets:extract": "python3 ./scripts/sync_snippets.py extract",
+        "snippets:apply": "python3 ./scripts/sync_snippets.py apply"
     },
     "version": "1.0.0",
     "packageManager": "pnpm@10.5.2"
