--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
         "format:markdownlint": "markdownlint -f ./*.md doc/*.md",
         "format:ruff": "uv run ruff format --respect-gitignore && uv run ruff check --fix",
         "preinstall": "npx only-allow pnpm",
-        "lint": "run-p lint:math lint:insertion lint:fence lint:py lint:md lint:ruff lint:ruff_check",
+        "lint": "run-s lint:snippets lint:parallel",
         "lint:math": "node ./scripts/check-math.mjs",
         "lint:insertion": "python3 ./scripts/check_inline_math_spacing.py",
         "lint:fence": "python3 ./scripts/lint_no_plain_python_fence.py",
         "lint:py": "python3 -m compileall -q scripts",
         "lint:md": "markdownlint *.md */*.md",
+        "lint:parallel": "run-p lint:math lint:insertion lint:fence lint:py lint:md lint:ruff lint:ruff_check",
         "lint:ruff": "uv run ruff check --respect-gitignore",
         "lint:ruff_check": "uv run ruff format --respect-gitignore --check",
+        "lint:snippets": "pnpm snippets:extract && git diff --exit-code -- exercise series snippets",
         "snippets:extract": "python3 ./scripts/sync_snippets.py extract",
         "snippets:apply": "python3 ./scripts/sync_snippets.py apply"
     },
