--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
         "lint:math": "node ./scripts/check-math.mjs",
         "lint:insertion": "python3 ./scripts/check_inline_math_spacing.py",
         "lint:fence": "python3 ./scripts/lint_no_plain_python_fence.py",
+        "lint:snippet_lines": "python3 ./scripts/check_snippet_line_counts.py",
         "lint:py": "python3 -m compileall -q scripts",
         "lint:md": "markdownlint *.md */*.md",
-        "lint:parallel": "run-p lint:math lint:insertion lint:fence lint:py lint:md lint:ruff lint:ruff_check",
+        "lint:parallel": "run-p lint:math lint:insertion lint:fence lint:snippet_lines lint:py lint:md lint:ruff lint:ruff_check",
         "lint:ruff": "uv run ruff check --respect-gitignore",
         "lint:ruff_check": "uv run ruff format --respect-gitignore --check",
         "lint:snippets": "tmpdir=$(mktemp -d) && python3 ./scripts/sync_snippets.py --snippets-dir \"$tmpdir\" extract && diff -qr \"$tmpdir\" snippets",
