--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "lint:math": "node ./scripts/check-math.mjs",
         "lint:insertion": "python3 ./scripts/check_inline_math_spacing.py",
         "lint:fence": "python3 ./scripts/lint_no_plain_python_fence.py",
-        "lint:snippet_lines": "python3 ./scripts/check_snippet_line_counts.py",
+        "lint:snippet_lines": "python3 ./scripts/check_snippet.py",
         "lint:py": "python3 -m compileall -q scripts",
         "lint:md": "markdownlint *.md */*.md",
         "lint:parallel": "run-p lint:math lint:insertion lint:fence lint:snippet_lines lint:py lint:md lint:ruff lint:ruff_check",
