--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
         "lint:snippet_lines": "python3 ./scripts/check_snippet.py",
         "lint:py": "python3 -m compileall -q scripts",
         "lint:md": "markdownlint *.md */*.md",
-        "lint:parallel": "run-p lint:math lint:insertion lint:fence lint:snippet_lines lint:py lint:md lint:ruff lint:ruff_check",
+        "lint:parallel": "run-p lint:math lint:insertion lint:fence lint:snippet_lines lint:section_order lint:py lint:md lint:ruff lint:ruff_check",
         "lint:ruff": "uv run ruff check --respect-gitignore",
         "lint:ruff_check": "uv run ruff format --respect-gitignore --check",
+        "lint:section_order": "python3 ./scripts/check_section_order.py",
         "lint:snippets": "tmpdir=$(mktemp -d) && python3 ./scripts/sync_snippets.py --snippets-dir \"$tmpdir\" extract && diff -qr \"$tmpdir\" snippets",
         "snippets:extract": "python3 ./scripts/sync_snippets.py extract",
         "snippets:apply": "python3 ./scripts/sync_snippets.py apply"
