--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "lint:py": "python3 -m compileall -q scripts",
         "lint:md": "markdownlint *.md */*.md",
         "lint:image": "python3 ./scripts/check_image_links.py",
-        "lint:parallel": "run-p lint:math lint:insertion lint:fence lint:snippet_lines lint:section_order lint:py lint:md lint:image lint:ruff lint:ruff_check",
+        "lint:parallel": "run-p lint:math lint:insertion lint:fence lint:snippet_lines lint:section_order lint:py lint:md lint:image lint:keyword_duplicates lint:ruff lint:ruff_check",
+        "lint:keyword_duplicates": "python3 ./scripts/check_keyword_duplicates.py",
         "lint:ruff": "uv run ruff check --respect-gitignore",
         "lint:ruff_check": "uv run ruff format --respect-gitignore --check",
         "lint:section_order": "python3 ./scripts/check_section_order.py",
